syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "IdentityDataApiProto";
option java_package = "com.techorgx.identity.api.v1";

service IdentityApi {
  rpc createUser (CreateUserRequest) returns (CreateUserResponse);
  rpc verifyEmail (VerifyEmailRequest) returns (VerifyEmailResponse);
  rpc verifyEmailOtp (VerifyEmailOtpRequest) returns (VerifyEmailOtpResponse);
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string firstName = 4;
  string LastName = 5;
}

message CreateUserResponse {
  string username = 1;
  string userStatus = 2;
  bool isEmailVerified = 3;
  bool userExists = 4;
}

message VerifyEmailRequest {
   string email = 1;
}

message VerifyEmailResponse {
  string message = 1;
}

message VerifyEmailOtpRequest {
  string otp = 1;
}

message VerifyEmailOtpResponse {
  string isValidOtp = 1;
}
